--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==2.0.3
-torch==1.10.0
-librosa==0.8.1
-numpy==1.21.2
-scikit-learn==0.24.2
-matplotlib==3.4.3
-Python==3.10
+Flask==3.0.3
+torch==2.8.0
+librosa==0.10.2.post1
+numpy==2.1.3
+scikit-learn==1.6.1
+matplotlib==3.10.1
