--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==3.0.3
-torch==2.8.0
+torch==2.8.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 librosa==0.10.2.post1
 numpy==2.1.3
 scikit-learn==1.6.1
